Change all local image links to utilize a public image website instead.
This is because:
1. I don't want to uplaod 300 MB of images to my GitHub repo.
2. I don't know if I'm allowed to upload the local images to an image hosting website.

--- a/css3-course/project-1/parks.html
+++ b/css3-course/project-1/parks.html
@@ -17,23 +17,23 @@
         <li><a href="parks.html">Walks in the Park</a></li>
       </ul>
     </nav>
-    <img src="images/BaconGallupPark.jpg" width="200" alt="Brown Labradoodle sitting next to a statue.">
+    <img src="https://loremflickr.com/200/200/cat" width="200" alt="Brown Labradoodle sitting next to a statue.">
     <h1>Michigan Parks</h1>
 
   </header>
   <main>
     <div>
-      <img src="images/bacon_in_the_woods.png" alt="brown labradoodle sitting near a stream in a wooded setting"
+      <img src="https://loremflickr.com/100/100/cat" alt="brown labradoodle sitting near a stream in a wooded setting"
         width="100">
-      <img src="images/bacon_near_the_fort.png"
+      <img src="https://loremflickr.com/101/100/cat"
         alt="brown labradoodle posing in front of a makeshift fort made of branches" width="100">
-      <img src="images/downed_tree.png" alt="a downed tree crossign a stream" width="100">
-      <img src="images/fort_in_woods.png" alt="a small fort made of branches" width="100">
-      <img src="images/huron_river_cascades.JPG" alt=" two people on a kayak approaching some small rapids" width="100">
-      <img src="images/lake_view.JPG" alt="a glimpse of a child running along a lake obscured by branches" width="100">
-      <img src="images/mist_over_huron_river.JPG" alt="the mist rising over a river in the morning" width="100">
-      <img src="images/munising.jpg" alt="small waterfall" width="100">
-      <img src="images/reflected_tree.JPG" alt="reflection of a lake and trees" width="100">
+      <img src="https://loremflickr.com/102/100/cat" alt="a downed tree crossign a stream" width="100">
+      <img src="https://loremflickr.com/103/100/cat" alt="a small fort made of branches" width="100">
+      <img src="https://loremflickr.com/104/100/cat" alt=" two people on a kayak approaching some small rapids" width="100">
+      <img src="https://loremflickr.com/105/100/cat" alt="a glimpse of a child running along a lake obscured by branches" width="100">
+      <img src="https://loremflickr.com/106/100/cat" alt="the mist rising over a river in the morning" width="100">
+      <img src="https://loremflickr.com/107/100/cat" alt="small waterfall" width="100">
+      <img src="https://loremflickr.com/108/100/cat" alt="reflection of a lake and trees" width="100">
 
     </div>
 
