--- a/css3-course/project-1/neighborhood.html
+++ b/css3-course/project-1/neighborhood.html
@@ -17,25 +17,25 @@
         <li><a href="parks.html">Walks in the Park</a></li>
       </ul>
     </nav>
-    <img src="images/BaconGallupPark.jpg" width="200" alt="Brown Labradoodle sitting next to a statue.">
+    <img src="https://loremflickr.com/200/200/cat" width="200" alt="Brown Labradoodle sitting next to a statue.">
     <h1>Neighborhood Walks</h1>
   </header>
   <main>
     <div>
-      <img src="images/bend_in_the_road.png"
+      <img src="https://loremflickr.com/100/100/cat"
         alt="a purple tree stands in contrast to the green leaved trees along a bend in the road" width="100">
-      <img src="images/pink_blossoms.png" alt="small pink blossoms on an otherwise green leaved tree" width="100">
-      <img src="images/blooming_trees.png" alt="brown labradoodle sitting in front of white and purple blooming  trees"
+      <img src="https://loremflickr.com/101/100/cat" alt="small pink blossoms on an otherwise green leaved tree" width="100">
+      <img src="https://loremflickr.com/102/100/cat" alt="brown labradoodle sitting in front of white and purple blooming  trees"
         width="100">
-      <img src="images/falling_petals.png" alt="a purple tulip tree that is beginning to shed its petals" width="100">
-      <img src="images/hanging_plants.png" alt="red and green plants in a decorative hanging basket" width="100">
-      <img src="images/potted_plants.png" alt="a decorative planter with a variety of brightly colored plants "
+      <img src="https://loremflickr.com/103/100/cat" alt="a purple tulip tree that is beginning to shed its petals" width="100">
+      <img src="https://loremflickr.com/104/100/cat" alt="red and green plants in a decorative hanging basket" width="100">
+      <img src="https://loremflickr.com/105/100/cat" alt="a decorative planter with a variety of brightly colored plants "
         width="100">
-      <img src="images/red_maple.png" alt="a small Japanese maple tree in front of a putple door" width="100">
-      <img src="images/tree_with_white_blooms.png"
+      <img src="https://loremflickr.com/106/100/cat" alt="a small Japanese maple tree in front of a putple door" width="100">
+      <img src="https://loremflickr.com/107/100/cat"
         alt="brown labradoodle sitting in front of tree blooming with white petals" width="100">
-      <img src="images/tulips.png" alt="bright red tulips in front of a garden light" width="100">
-      <img src="images/white_buds_on_tree.png" alt="artsy shot of white blooms on a green tree with a dark background"
+      <img src="https://loremflickr.com/108/100/cat" alt="bright red tulips in front of a garden light" width="100">
+      <img src="https://loremflickr.com/109/100/cat" alt="artsy shot of white blooms on a green tree with a dark background"
         width="100">
     </div>
   </main>
