--- a/css3-course/project-1/index.html
+++ b/css3-course/project-1/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width">
   <title>Springtime In Michigan</title>
   <!-- You will need to link to the CSS file -->
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -17,7 +18,7 @@
         <li><a href="parks.html">Walks in the Park</a></li>
       </ul>
     </nav>
-    <img src="https://loremflickr.com/200/200/cat" width="200" alt="Brown Labradoodle sitting next to a statue.">
+    <img src="https://loremflickr.com/200/200/park" width="200" alt="Brown Labradoodle sitting next to a statue.">
     <h1>Springtime in Michigan</h1>
   </header>
   <main>
