--- a/css3-course/project-1/parks.html
+++ b/css3-course/project-1/parks.html
@@ -18,23 +18,23 @@
         <li><a href="parks.html">Walks in the Park</a></li>
       </ul>
     </nav>
-    <img src="https://loremflickr.com/200/200/park" width="200" alt="Brown Labradoodle sitting next to a statue.">
+    <img src="https://loremflickr.com/200/200/garden" width="200" alt="Brown Labradoodle sitting next to a statue.">
     <h1>Michigan Parks</h1>
 
   </header>
   <main>
     <div>
-      <img src="https://loremflickr.com/100/150/park" alt="brown labradoodle sitting near a stream in a wooded setting"
+      <img src="https://loremflickr.com/100/150/garden" alt="brown labradoodle sitting near a stream in a wooded setting"
         width="100">
-      <img src="https://loremflickr.com/101/150/park"
+      <img src="https://loremflickr.com/101/150/garden"
         alt="brown labradoodle posing in front of a makeshift fort made of branches" width="100">
-      <img src="https://loremflickr.com/102/150/park" alt="a downed tree crossign a stream" width="100">
-      <img src="https://loremflickr.com/103/150/park" alt="a small fort made of branches" width="100">
-      <img src="https://loremflickr.com/104/150/park" alt=" two people on a kayak approaching some small rapids" width="100">
-      <img src="https://loremflickr.com/105/150/park" alt="a glimpse of a child running along a lake obscured by branches" width="100">
-      <img src="https://loremflickr.com/106/150/park" alt="the mist rising over a river in the morning" width="100">
-      <img src="https://loremflickr.com/107/150/park" alt="small waterfall" width="100">
-      <img src="https://loremflickr.com/108/150/park" alt="reflection of a lake and trees" width="100">
+      <img src="https://loremflickr.com/102/150/garden" alt="a downed tree crossign a stream" width="100">
+      <img src="https://loremflickr.com/103/150/garden" alt="a small fort made of branches" width="100">
+      <img src="https://loremflickr.com/104/150/garden" alt=" two people on a kayak approaching some small rapids" width="100">
+      <img src="https://loremflickr.com/105/150/garden" alt="a glimpse of a child running along a lake obscured by branches" width="100">
+      <img src="https://loremflickr.com/106/150/garden" alt="the mist rising over a river in the morning" width="100">
+      <img src="https://loremflickr.com/107/150/garden" alt="small waterfall" width="100">
+      <img src="https://loremflickr.com/108/150/garden" alt="reflection of a lake and trees" width="100">
 
     </div>
 
