--- a/css3-course/project-1/parks.html
+++ b/css3-course/project-1/parks.html
@@ -24,17 +24,17 @@
   </header>
   <main>
     <div>
-      <img src="https://loremflickr.com/100/150/garden" alt="brown labradoodle sitting near a stream in a wooded setting"
+      <img src="images/bacon_in_the_woods.png" alt="brown labradoodle sitting near a stream in a wooded setting"
         width="100">
-      <img src="https://loremflickr.com/101/150/garden"
+      <img src="images/bacon_near_the_fort.png"
         alt="brown labradoodle posing in front of a makeshift fort made of branches" width="100">
-      <img src="https://loremflickr.com/102/150/garden" alt="a downed tree crossign a stream" width="100">
-      <img src="https://loremflickr.com/103/150/garden" alt="a small fort made of branches" width="100">
-      <img src="https://loremflickr.com/104/150/garden" alt=" two people on a kayak approaching some small rapids" width="100">
-      <img src="https://loremflickr.com/105/150/garden" alt="a glimpse of a child running along a lake obscured by branches" width="100">
-      <img src="https://loremflickr.com/106/150/garden" alt="the mist rising over a river in the morning" width="100">
-      <img src="https://loremflickr.com/107/150/garden" alt="small waterfall" width="100">
-      <img src="https://loremflickr.com/108/150/garden" alt="reflection of a lake and trees" width="100">
+      <img src="images/downed_tree.png" alt="a downed tree crossign a stream" width="100">
+      <img src="images/fort_in_woods.png" alt="a small fort made of branches" width="100">
+      <img src="images/huron_river_cascades.JPG" alt=" two people on a kayak approaching some small rapids" width="100">
+      <img src="images/lake_view.JPG" alt="a glimpse of a child running along a lake obscured by branches" width="100">
+      <img src="images/mist_over_huron_river.JPG" alt="the mist rising over a river in the morning" width="100">
+      <img src="images/munising.jpg" alt="small waterfall" width="100">
+      <img src="images/reflected_tree.JPG" alt="reflection of a lake and trees" width="100">
 
     </div>
 
