--- a/css3-course/project-1/neighborhood.html
+++ b/css3-course/project-1/neighborhood.html
@@ -18,7 +18,7 @@
         <li><a href="parks.html">Walks in the Park</a></li>
       </ul>
     </nav>
-    <img src="https://loremflickr.com/200/200/garden" width="200" alt="Brown Labradoodle sitting next to a statue.">
+    <img src="images/BaconGallupPark.jpg" width="200" alt="Brown Labradoodle sitting next to a statue.">
     <h1>Neighborhood Walks</h1>
   </header>
   <main>
