A lot of updates for project 3 - final homework of css3 course

--- a/css3-course/project-3/index.html
+++ b/css3-course/project-3/index.html
@@ -3,49 +3,37 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Springtime In Michigan</title>
-    <!-- You will need to link to the CSS file -->
     <link rel="stylesheet" href="css/style.css" />
+    <title>Brew Haven Coffee Shop</title>
   </head>
 
   <body>
-    <a href="#main-content">Skip to Main Content</a>
+    <a id="skip-to-main" href="#main-content">Skip to Main Content</a>
     <header>
       <nav>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="neighborhood.html">Neighborhood Walks</a></li>
-          <li><a href="parks.html">Walks in the Park</a></li>
+          <li><a href="hot-drinks.html">Hot Drinks</a></li>
+          <li><a href="cold-drinks.html">Cold Drinks</a></li>
         </ul>
-        <img
-          src="images/BaconGallupPark.jpg"
-          width="200"
-          alt="Brown Labradoodle sitting next to a statue."
-        />
       </nav>
-      <h1>Springtime in Michigan</h1>
+      <h1>Brew Haven Coffee Shop</h1>
     </header>
     <main id="main-content">
       <p>
-        Springtime in
-        <a href="https://www.michigan.org/city/ann-arbor">Ann Arbor</a> is a
-        beautiful time. Even though it can be chilly at times, it is nice to
-        walk my dog Bacon. This site includes some pictures I have taken on
-        these walks.
+        Welcome to
+        <a href="#">Brew Haven Coffee Shop</a> where every cup tells a story.
+        Nestled in the heart of the city, our coffee shop is more than just a
+        place to grab your daily caffeine fix—it's a cozy retreat where comfort
+        meets craft. From the rich, aromatic beans sourced from sustainable
+        farms to the carefully crafted pastries baked fresh each morning, we
+        take pride in delivering an exceptional experience with every visit.
       </p>
-
       <p>
-        Sometimes we walk around the neighborhood, other times we make it to the
-        woods. Ann Arbor also has some beautiful lakes and rivers including the
-        <a
-          href="https://www.annarbor.org/things-to-do/recreation-outdoors/huron-river/"
-          >Huron River Watertrail</a
-        >
-        and the
-        <a
-          href="https://www.a2gov.org/departments/Parks-Recreation/parks-places/argo/pages/default.aspx"
-          >Argo Park Cascades</a
-        >.
+        Whether you're here to catch up with friends, find inspiration for your
+        next big project, or simply savor a moment of tranquility, Brew Haven
+        offers the perfect setting. Enjoy the warm ambiance, free Wi-Fi, and a
+        curated playlist that complements your mood.
       </p>
     </main>
     <footer>
