added pages and images to the capstone project

--- a/capstone/order.html
+++ b/capstone/order.html
@@ -23,21 +23,15 @@
   <body>
     <header>
       <nav class="nav nav-pills flex-column flex-sm-row justify-content-lg-center" role="navigation">
-        <a class="flex-sm-fill flex-lg-grow-0 nav-link text-center text-danger-emphasis active" href="index.html">Home</a>
+        <a class="flex-sm-fill flex-lg-grow-0 nav-link text-center text-danger-emphasis" href="index.html">Home</a>
         <a class="flex-sm-fill flex-lg-grow-0 nav-link text-center text-danger-emphasis" href="gallery.html">Gallery</a>
-        <a class="flex-sm-fill flex-lg-grow-0 nav-link text-center text-danger-emphasis" href="order.html">Order</a>
+        <a class="flex-sm-fill flex-lg-grow-0 nav-link text-center text-danger-emphasis active" href="order.html">Order</a>
       </nav>
     </header>
 
     <main>
-      <div class="information">
-        <p>Lorem ipsum</p>
-      </div>
-      <div class="calendar">
-        <p>Calendar plugin</p>
-      </div>
-      <div class="weather">
-        <p>Weather plugin</p>
+      <div class="order">
+        <p>Order</p>
       </div>
     </main>
 
