Finished Gallery page and added images and added google calendar events

--- a/capstone/gallery.html
+++ b/capstone/gallery.html
@@ -64,6 +64,49 @@
           <figcaption>Iced Mocha</figcaption>
         </figure>
       </div>
+
+      <div class="carousel slide" id="carousel" data-interval="false">
+        <div class="carousel-indicators">
+          <button
+            type="button"
+            data-bs-target="#carousel"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="images/coffee-shop-vibe-1.webp" class="d-block w-100" alt="..." />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Coffee shop with a cozy and rustic vibe</h5>
+              <p>
+                Savor the moment in a charming coffee haven, where comfort meets style and every corner invites you to enjoy a
+                delightful cup of coffee.
+              </p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="images/coffee-shop-vibe-2.webp" class="d-block w-100" alt="..." />
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Cozy coffee shop capturing a different angle</h5>
+              <p>
+                Relax and unwind in a cozy coffee nook, where warm lighting, rustic wood accents, and the aroma of freshly brewed
+                coffee create the perfect ambiance for a peaceful escape.
+              </p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carousel" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carousel" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
     </main>
 
     <footer>Footer</footer>
