--- a/capstone/index.html
+++ b/capstone/index.html
@@ -34,7 +34,22 @@
         <p>Lorem ipsum</p>
       </div>
       <div class="calendar">
-        <p>Calendar plugin</p>
+        <iframe
+          src="https://calendar.google.com/calendar/embed?height=600&wkst=2&ctz=Etc%2FGMT&mode=AGENDA&showPrint=0&showTz=0&title=Coffee%20Shop%20Events%20Calendar&src=Zjk4YjVmMmZmNGJjYjVlM2VjMjM3OTY0OGE1Y2MyNzhmMGUzOTFiODQzMzI3MDMxZGE0YTk3ZjUwYzkxODUzMkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23795548"
+          style="border: solid 1px #777"
+          width="800"
+          height="600"
+          frameborder="0"
+          scrolling="no"></iframe>
+      </div>
+      <div>
+        <iframe
+          src="https://calendar.google.com/calendar/embed?height=600&wkst=2&ctz=Etc%2FGMT&mode=WEEK&showPrint=0&showTz=0&title=Coffee%20Shop%20Events%20Calendar&src=Zjk4YjVmMmZmNGJjYjVlM2VjMjM3OTY0OGE1Y2MyNzhmMGUzOTFiODQzMzI3MDMxZGE0YTk3ZjUwYzkxODUzMkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23795548"
+          style="border: solid 1px #777"
+          width="800"
+          height="600"
+          frameborder="0"
+          scrolling="no"></iframe>
       </div>
       <div class="weather">
         <p>Weather plugin</p>
