Add Lightbox for images

--- a/capstone/gallery.html
+++ b/capstone/gallery.html
@@ -13,6 +13,12 @@
       crossorigin="anonymous" />
     <link
       rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.5/css/lightbox.css"
+      integrity="sha512-DKdRaC0QGJ/kjx0U0TtJNCamKnN4l+wsMdION3GG0WVK6hIoJ1UPHRHeXNiGsXdrmq19JJxgIubb/Z7Og2qJww=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
       integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
       crossorigin="anonymous"
@@ -32,36 +38,52 @@
     <main>
       <div class="gallery-grid">
         <figure>
-          <img src="images/espresso.jfif" alt="Espresso" width="200" />
-          <figcaption>Espresso</figcaption>
+          <a href="images/espresso.jfif" data-lightbox="coffeeshop" data-title="Espresso">
+            <img src="images/espresso.jfif" alt="Espresso" width="200" />
+            <figcaption>Espresso</figcaption>
+          </a>
         </figure>
         <figure>
-          <img src="images/americano.jfif" alt="Americano" width="200" />
-          <figcaption>Americano</figcaption>
+          <a href="images/americano.jfif" data-lightbox="coffeeshop" data-title="Americano">
+            <img src="images/americano.jfif" alt="Americano" width="200" />
+            <figcaption>Americano</figcaption>
+          </a>
         </figure>
         <figure>
-          <img src="images/cappuccino.webp" alt="Cappuccino" width="200" />
-          <figcaption>Cappuccino</figcaption>
+          <a href="images/cappuccino.webp" data-lightbox="coffeeshop" data-title="Cappuccino">
+            <img src="images/cappuccino.webp" alt="Cappuccino" width="200" />
+            <figcaption>Cappuccino</figcaption>
+          </a>
         </figure>
         <figure>
-          <img src="images/cold-brew.jfif" alt="Cold Brew" width="200" />
-          <figcaption>Cold Brew</figcaption>
+          <a href="images/cold-brew.jfif" data-lightbox="coffeeshop" data-title="Cold Brew">
+            <img src="images/cold-brew.jfif" alt="Cold Brew" width="200" />
+            <figcaption>Cold Brew</figcaption>
+          </a>
         </figure>
         <figure>
-          <img src="images/hot-chocolate.jfif" alt="Hot Chocolate" width="200" />
-          <figcaption>Hot Chocolate</figcaption>
+          <a href="images/hot-chocolate.jfif" data-lightbox="coffeeshop" data-title="Hot Chocolate">
+            <img src="images/hot-chocolate.jfif" alt="Hot Chocolate" width="200" />
+            <figcaption>Hot Chocolate</figcaption>
+          </a>
         </figure>
         <figure>
-          <img src="images/nitro-cold-brew.jfif" alt="Nitro Cold Brew" width="200" />
-          <figcaption>Nitro Cold Brew</figcaption>
+          <a href="images/nitro-cold-brew.jfif" data-lightbox="coffeeshop" data-title="Nitro Cold Brew">
+            <img src="images/nitro-cold-brew.jfif" alt="Nitro Cold Brew" width="200" />
+            <figcaption>Nitro Cold Brew</figcaption>
+          </a>
         </figure>
         <figure>
-          <img src="images/iced-matcha-latte.jfif" alt="Iced Matcha Latte" width="200" />
-          <figcaption>Iced Matcha Latte</figcaption>
+          <a href="images/iced-matcha-latte.jfif" data-lightbox="coffeeshop" data-title="Iced Matcha Latte">
+            <img src="images/iced-matcha-latte.jfif" alt="Iced Matcha Latte" width="200" />
+            <figcaption>Iced Matcha Latte</figcaption>
+          </a>
         </figure>
         <figure>
-          <img src="images/iced-mocha.jfif" alt="Iced Mocha" width="200" />
-          <figcaption>Iced Mocha</figcaption>
+          <a href="images/iced-mocha.jfif" data-lightbox="coffeeshop" data-title="Iced Mocha">
+            <img src="images/iced-mocha.jfif" alt="Iced Mocha" width="200" />
+            <figcaption>Iced Mocha</figcaption>
+          </a>
         </figure>
       </div>
 
@@ -116,6 +138,11 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.5/js/lightbox-plus-jquery.js"
+      integrity="sha512-C6X3/hskB+isJVpYkZ68yausQGoZnr7w41ps9fftfXSPhe51ygvgh8NW2b9XCxCpIMUku2BTUOd2JtswTkl29g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"></script>
     <script src="scripts/script.js"></script>
   </body>
 </html>
