--- a/capstone/index.html
+++ b/capstone/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Capstone Project</title>
+    <title>Brew Haven Coffee Shop</title>
     <!-- Styles -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -23,32 +23,50 @@
   <body>
     <header>
       <nav class="nav nav-pills flex-column flex-sm-row justify-content-lg-center" role="navigation">
-        <a class="flex-sm-fill flex-lg-grow-0 nav-link text-center text-danger-emphasis active" href="index.html">Home</a>
-        <a class="flex-sm-fill flex-lg-grow-0 nav-link text-center text-danger-emphasis" href="gallery.html">Gallery</a>
-        <a class="flex-sm-fill flex-lg-grow-0 nav-link text-center text-danger-emphasis" href="order.html">Order</a>
+        <a class="flex-sm-fill flex-lg-grow-0 nav-link text-center text-danger-emphasis active" href="index.html"
+          ><i class="fa-solid fa-house"></i> Home</a
+        >
+        <a class="flex-sm-fill flex-lg-grow-0 nav-link text-center text-danger-emphasis" href="gallery.html"
+          ><i class="fa-regular fa-images"></i> Gallery</a
+        >
+        <a class="flex-sm-fill flex-lg-grow-0 nav-link text-center text-danger-emphasis" href="events.html"
+          ><i class="fa-regular fa-calendar-days"></i> Events</a
+        >
       </nav>
     </header>
 
     <main>
+      <h1><i class="fa-solid fa-mug-hot"></i> Brew Haven Coffee Shop</h1>
       <div class="information">
-        <p>Lorem ipsum</p>
-      </div>
-      <div class="calendar">
-        <iframe
-          src="https://calendar.google.com/calendar/embed?height=600&wkst=2&ctz=Etc%2FGMT&mode=AGENDA&showPrint=0&showTz=0&title=Coffee%20Shop%20Events%20Calendar&src=Zjk4YjVmMmZmNGJjYjVlM2VjMjM3OTY0OGE1Y2MyNzhmMGUzOTFiODQzMzI3MDMxZGE0YTk3ZjUwYzkxODUzMkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23795548"
-          scrolling="no"></iframe>
-      </div>
-      <div>
-        <iframe
-          src="https://calendar.google.com/calendar/embed?height=600&wkst=2&ctz=Etc%2FGMT&mode=WEEK&showPrint=0&showTz=0&title=Coffee%20Shop%20Events%20Calendar&src=Zjk4YjVmMmZmNGJjYjVlM2VjMjM3OTY0OGE1Y2MyNzhmMGUzOTFiODQzMzI3MDMxZGE0YTk3ZjUwYzkxODUzMkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23795548"
-          scrolling="no"></iframe>
-      </div>
-      <div class="weather">
-        <p>Weather plugin</p>
+        <p>
+          Welcome to <b>Brew Haven Coffee Shop</b>, where every cup is a journey into the heart of authentic coffee culture. We
+          are a locally-owned coffee shop that takes pride in offering a thoughtfully curated selection of beverages crafted from
+          the finest beans, sourced from sustainable farms around the world. Whether you're a coffee connoisseur or someone who
+          simply enjoys a good brew, Brew Haven promises an experience that goes beyond the ordinary. Our talented baristas pour
+          their passion into every cup, delivering rich, full-bodied flavors through our espresso-based drinks, pour-overs, and
+          seasonal specials. Each visit is a chance to explore a world of aromas and tastes, from the boldness of a dark roast
+          espresso to the creamy indulgence of a perfectly frothed cappuccino.
+        </p>
+        <p>
+          At Brew Haven, we believe that a great cup of coffee is best enjoyed in an equally welcoming environment. Step inside,
+          and you’ll be greeted by the warm, rustic tones of our thoughtfully designed space. With comfortable seating, ambient
+          lighting, and free Wi-Fi, we invite you to relax, work, or catch up with friends while savoring your favorite drink.
+          Alongside our coffee offerings, we serve freshly baked pastries and snacks, all made in-house to complement your
+          beverage of choice. Whether you're stopping by for your morning pick-me-up or looking for a peaceful afternoon retreat,
+          our cozy atmosphere is designed to make you feel at home.
+        </p>
+        <p>
+          We are also deeply committed to the local community, supporting sustainability and eco-friendly practices wherever
+          possible. From compostable cups to ethically sourced beans, Brew Haven is dedicated to making a positive impact on both
+          our environment and our community. We regularly host local artists, musicians, and events, turning our shop into a
+          lively gathering space for creativity and connection. At Brew Haven, it’s not just about coffee; it’s about creating
+          moments that bring people together. Join us today for a truly exceptional coffee experience, where every sip is a
+          reminder of the love and care that goes into every detail of our shop.
+        </p>
       </div>
     </main>
 
-    <footer>Footer</footer>
+    <footer>Copyrights reserved by Brew Haven Coffee Shop @ 2024</footer>
 
     <!-- Scripts -->
     <script
