--- a/capstone/gallery.html
+++ b/capstone/gallery.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Capstone Project</title>
+    <title>Brew Haven Coffee Shop</title>
     <!-- Styles -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -29,13 +29,21 @@
   <body>
     <header>
       <nav class="nav nav-pills flex-column flex-sm-row justify-content-lg-center" role="navigation">
-        <a class="flex-sm-fill flex-lg-grow-0 nav-link text-center text-danger-emphasis" href="index.html">Home</a>
-        <a class="flex-sm-fill flex-lg-grow-0 nav-link text-center text-danger-emphasis active" href="gallery.html">Gallery</a>
-        <a class="flex-sm-fill flex-lg-grow-0 nav-link text-center text-danger-emphasis" href="order.html">Order</a>
+        <a class="flex-sm-fill flex-lg-grow-0 nav-link text-center text-danger-emphasis" href="index.html"
+          ><i class="fa-solid fa-house"></i> Home</a
+        >
+        <a class="flex-sm-fill flex-lg-grow-0 nav-link text-center text-danger-emphasis active" href="gallery.html"
+          ><i class="fa-regular fa-images"></i> Gallery</a
+        >
+        <a class="flex-sm-fill flex-lg-grow-0 nav-link text-center text-danger-emphasis" href="events.html"
+          ><i class="fa-regular fa-calendar-days"></i> Events</a
+        >
       </nav>
     </header>
 
     <main>
+      <h1><i class="fa-solid fa-mug-hot"></i> Brew Haven Coffee Shop</h1>
+      <p>*Click on an image for Lightbox effect</p>
       <div class="gallery-grid">
         <figure>
           <a href="images/espresso.jfif" data-lightbox="coffeeshop" data-title="Espresso">
@@ -131,7 +139,7 @@
       </div>
     </main>
 
-    <footer>Footer</footer>
+    <footer>Copyrights reserved by CoffeeShop @ 2024</footer>
 
     <!-- Scripts -->
     <script
