--- a/capstone/events.html
+++ b/capstone/events.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brew Haven Coffee Shop</title>
     <!-- Styles -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous" />
+      crossorigin="anonymous">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
       integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
       crossorigin="anonymous"
-      referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="styles/style.css" />
+      referrerpolicy="no-referrer">
+    <link rel="stylesheet" href="styles/style.css">
   </head>
 
   <body>
     <header>
-      <nav class="nav nav-pills flex-column flex-sm-row justify-content-lg-center" role="navigation">
+      <nav class="nav nav-pills flex-column flex-sm-row justify-content-lg-center">
         <a class="flex-sm-fill flex-lg-grow-0 nav-link text-center text-danger-emphasis" href="index.html"
           ><i class="fa-solid fa-house"></i> Home</a
         >
@@ -42,13 +42,11 @@
         <div class="row">
           <div class="d-xs-block d-lg-none">
             <iframe
-              src="https://calendar.google.com/calendar/embed?height=600&wkst=2&ctz=Etc%2FGMT&mode=AGENDA&showPrint=0&showTz=0&title=Coffee%20Shop%20Events%20Calendar&src=Zjk4YjVmMmZmNGJjYjVlM2VjMjM3OTY0OGE1Y2MyNzhmMGUzOTFiODQzMzI3MDMxZGE0YTk3ZjUwYzkxODUzMkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23795548"
-              scrolling="no"></iframe>
+              src="https://calendar.google.com/calendar/embed?height=600&wkst=2&ctz=Etc%2FGMT&mode=AGENDA&showPrint=0&showTz=0&title=Coffee%20Shop%20Events%20Calendar&src=Zjk4YjVmMmZmNGJjYjVlM2VjMjM3OTY0OGE1Y2MyNzhmMGUzOTFiODQzMzI3MDMxZGE0YTk3ZjUwYzkxODUzMkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23795548"></iframe>
           </div>
           <div class="d-none d-lg-block">
             <iframe
-              src="https://calendar.google.com/calendar/embed?height=600&wkst=2&ctz=Etc%2FGMT&mode=MONTH&showPrint=0&showTz=0&title=Coffee%20Shop%20Events%20Calendar&src=Zjk4YjVmMmZmNGJjYjVlM2VjMjM3OTY0OGE1Y2MyNzhmMGUzOTFiODQzMzI3MDMxZGE0YTk3ZjUwYzkxODUzMkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23795548"
-              scrolling="no"></iframe>
+              src="https://calendar.google.com/calendar/embed?height=600&wkst=2&ctz=Etc%2FGMT&mode=MONTH&showPrint=0&showTz=0&title=Coffee%20Shop%20Events%20Calendar&src=Zjk4YjVmMmZmNGJjYjVlM2VjMjM3OTY0OGE1Y2MyNzhmMGUzOTFiODQzMzI3MDMxZGE0YTk3ZjUwYzkxODUzMkBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&color=%23795548"></iframe>
           </div>
         </div>
       </div>
