fixed more errors related to validators

--- a/capstone/gallery.html
+++ b/capstone/gallery.html
@@ -47,49 +47,49 @@
       <div class="gallery-grid">
         <figure>
           <a href="images/espresso.jfif" data-lightbox="coffeeshop" data-title="Espresso">
-            <img src="images/espresso.jfif" alt="Espresso" width="200" />
+            <img src="images/espresso.jfif" alt="Espresso" width="200">
           </a>
           <figcaption>Espresso</figcaption>
         </figure>
         <figure>
           <a href="images/americano.jfif" data-lightbox="coffeeshop" data-title="Americano">
-            <img src="images/americano.jfif" alt="Americano" width="200" />
+            <img src="images/americano.jfif" alt="Americano" width="200">
           </a>
           <figcaption>Americano</figcaption>
         </figure>
         <figure>
           <a href="images/cappuccino.webp" data-lightbox="coffeeshop" data-title="Cappuccino">
-            <img src="images/cappuccino.webp" alt="Cappuccino" width="200" />
+            <img src="images/cappuccino.webp" alt="Cappuccino" width="200">
           </a>
           <figcaption>Cappuccino</figcaption>
         </figure>
         <figure>
           <a href="images/cold-brew.jfif" data-lightbox="coffeeshop" data-title="Cold Brew">
-            <img src="images/cold-brew.jfif" alt="Cold Brew" width="200" />
+            <img src="images/cold-brew.jfif" alt="Cold Brew" width="200">
           </a>
           <figcaption>Cold Brew</figcaption>
         </figure>
         <figure>
           <a href="images/hot-chocolate.jfif" data-lightbox="coffeeshop" data-title="Hot Chocolate">
-            <img src="images/hot-chocolate.jfif" alt="Hot Chocolate" width="200" />
+            <img src="images/hot-chocolate.jfif" alt="Hot Chocolate" width="200">
           </a>
           <figcaption>Hot Chocolate</figcaption>
         </figure>
         <figure>
           <a href="images/nitro-cold-brew.jfif" data-lightbox="coffeeshop" data-title="Nitro Cold Brew">
-            <img src="images/nitro-cold-brew.jfif" alt="Nitro Cold Brew" width="200" />
+            <img src="images/nitro-cold-brew.jfif" alt="Nitro Cold Brew" width="200">
           </a>
           <figcaption>Nitro Cold Brew</figcaption>
         </figure>
         <figure>
           <a href="images/iced-matcha-latte.jfif" data-lightbox="coffeeshop" data-title="Iced Matcha Latte">
-            <img src="images/iced-matcha-latte.jfif" alt="Iced Matcha Latte" width="200" />
+            <img src="images/iced-matcha-latte.jfif" alt="Iced Matcha Latte" width="200">
           </a>
           <figcaption>Iced Matcha Latte</figcaption>
         </figure>
         <figure>
           <a href="images/iced-mocha.jfif" data-lightbox="coffeeshop" data-title="Iced Mocha">
-            <img src="images/iced-mocha.jfif" alt="Iced Mocha" width="200" />
+            <img src="images/iced-mocha.jfif" alt="Iced Mocha" width="200">
           </a>
           <figcaption>Iced Mocha</figcaption>
         </figure>
