--- a/capstone/gallery.html
+++ b/capstone/gallery.html
@@ -108,7 +108,7 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/coffee-shop-vibe-1.webp" class="d-block w-100" alt="..." />
+            <img src="images/coffee-shop-vibe-1.webp" class="d-block w-100" alt="Coffee shop with a cozy and rustic vibe">
             <div class="carousel-caption d-none d-md-block">
               <h5>Coffee shop with a cozy and rustic vibe</h5>
               <p>
@@ -118,7 +118,7 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/coffee-shop-vibe-2.webp" class="d-block w-100" alt="..." />
+            <img src="images/coffee-shop-vibe-2.webp" class="d-block w-100" alt="Cozy coffee shop capturing a different angle">
             <div class="carousel-caption d-none d-md-block">
               <h5>Cozy coffee shop capturing a different angle</h5>
               <p>
